Typo corrected in documentation

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -665,7 +665,7 @@
 % \affiliation[obeypuctuation=true]{%
 %   \institution{Fluginstitut}\\
 %   \streetaddress{Sonnenallee 17}\\
-%   \postcode{123456},
+%   \postcode{123456}
 %   \city{Helm},
 %   \country{Germany}
 % }
