--- a/acmart.dtx
+++ b/acmart.dtx
@@ -3117,7 +3117,8 @@ Computing Machinery]
 %
 % \begin{macro}{\if@ACM@affiliation@obeypunctuation}
 % \changes{v1.33}{2017/03/28}{Added macro}
-%   Whether to print CCS
+%   Whether to use author's punctuation (by default false = add
+%   American punctuation)
 %    \begin{macrocode}
 \define@boolkey+{@ACM@affiliation@}[@ACM@affiliation@]{obeypunctuation}%
 [true]{}{\ClassError{\@classname}{obeypunctuation must be true or false}}
