--- a/README
+++ b/README
@@ -90,4 +90,7 @@ version 1.33    New option `timestamp' (Michael D. Adams)
 		We now use Type 1 versions of Libertine fonts even with XeTeX.
 		New hook acmart-preload-hook.tex (wizards only!)
 		Added new options `obeypunctuation' for \affiliation command
+		Added SubmissionID
+		Added right line count ruler for two-column formats
+		
 		
