--- a/README
+++ b/README
@@ -92,5 +92,6 @@ version 1.33    New option `timestamp' (Michael D. Adams)
 		Added new options `obeypunctuation' for \affiliation command
 		Added SubmissionID
 		Added right line count ruler for two-column formats
-		
+		Added workaround for Adobe Acrobat bugs in selection
+		Added eid field to the bibliography
 		
