--- a/README
+++ b/README
@@ -95,3 +95,4 @@ version 1.33    New option `timestamp' (Michael D. Adams)
 		Added workaround for Adobe Acrobat bugs in selection
 		Added eid field to the bibliography
 		
+version 1.34    Deleted DOI from doi numbers
