--- a/README
+++ b/README
@@ -96,3 +96,4 @@ version 1.33    New option `timestamp' (Michael D. Adams)
 		Added eid field to the bibliography
 		
 version 1.34    Deleted DOI from doi numbers
+		Changed bibstrip formatting
