--- a/README
+++ b/README
@@ -97,3 +97,5 @@ version 1.33    New option `timestamp' (Michael D. Adams)
 		
 version 1.34    Deleted DOI from doi numbers
 		Changed bibstrip formatting
+		The command \terms is now obsolete
+		
