Bib strip reformatting

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -3752,30 +3752,30 @@ Computing Machinery]
 \def\@copyrightowner{%
   \ifcase\acm@copyrightmode\relax % none
   \or % acmcopyright
-  ACM\@.
+  Association for Computing Machinerry.
   \or % acmlicensed
   Copyright held by the owner/author(s). Publication rights licensed to
-  ACM\@.
+  Association for Computing Machinerry.
   \or % rightsretained
   Copyright held by the owner/author(s).
   \or % usgov
   \or % usgovmixed
-  ACM\@.
+  Association for Computing Machinerry.
   \or % cagov
   Crown in Right of Canada.
   \or %cagovmixed
-  ACM\@.
+  Association for Computing Machinerry.
   \or %licensedusgovmixed
   Copyright held by the owner/author(s). Publication rights licensed to
-  ACM\@.
+  Association for Computing Machinerry.
   \or %licensedcagovmixed
   Copyright held by the owner/author(s). Publication rights licensed to
-  ACM\@.
+  Association for Computing Machinerry.
   \or % othergov
-  ACM\@.
+  Association for Computing Machinerry.
   \or % licensedothergov
   Copyright held by the owner/author(s). Publication rights licensed to
-  ACM\@.
+  Association for Computing Machinerry.
   \fi}
 %    \end{macrocode}
 %
@@ -4035,7 +4035,7 @@ Computing Machinery]
        \fi
     \fi
     \if@printcopyright
-      \copyright\ \@copyrightyear\ \@copyrightowner\
+      \copyright\ \@copyrightyear\ \@copyrightowner\\
     \else
      \@copyrightyear.\
     \fi
@@ -4062,7 +4062,7 @@ Computing Machinery]
             \$\@acmPrice\\
             \@formatdoi{\@acmDOI}%
           \else % Conference
-             \@acmISBN
+             ISBN~\@acmISBN
              \ifx\@acmPrice\@empty.\else\dots\$\@acmPrice\fi\\
              \@formatdoi{\@acmDOI}%
           \fi
