--- a/acmart.dtx
+++ b/acmart.dtx
@@ -3752,30 +3752,30 @@ Computing Machinery]
 \def\@copyrightowner{%
   \ifcase\acm@copyrightmode\relax % none
   \or % acmcopyright
-  Association for Computing Machinerry.
+  Association for Computing Machinery.
   \or % acmlicensed
   Copyright held by the owner/author(s). Publication rights licensed to
-  Association for Computing Machinerry.
+  Association for Computing Machinery.
   \or % rightsretained
   Copyright held by the owner/author(s).
   \or % usgov
   \or % usgovmixed
-  Association for Computing Machinerry.
+  Association for Computing Machinery.
   \or % cagov
   Crown in Right of Canada.
   \or %cagovmixed
-  Association for Computing Machinerry.
+  Association for Computing Machinery.
   \or %licensedusgovmixed
   Copyright held by the owner/author(s). Publication rights licensed to
-  Association for Computing Machinerry.
+  Association for Computing Machinery.
   \or %licensedcagovmixed
   Copyright held by the owner/author(s). Publication rights licensed to
-  Association for Computing Machinerry.
+  Association for Computing Machinery.
   \or % othergov
-  Association for Computing Machinerry.
+  Association for Computing Machinery.
   \or % licensedothergov
   Copyright held by the owner/author(s). Publication rights licensed to
-  Association for Computing Machinerry.
+  Association for Computing Machinery.
   \fi}
 %    \end{macrocode}
 %
