--- a/README
+++ b/README
@@ -99,3 +99,5 @@ version 1.34    Deleted DOI from doi numbers
 		Changed bibstrip formatting
 		The command \terms is now obsolete
 		The rulers in review mode now have continuous numbering
+
+version 1.35    Author-year bib style now uses square brackets.
