Updated TOG bib defaults in the sample

--- a/sample-acmtog.tex
+++ b/sample-acmtog.tex
@@ -2,6 +2,10 @@
 
 \usepackage{booktabs} % For formal tables
 
+% TOG prefers author-name bib system with square brackets
+\citestyle{acmauthoryear}
+\setcitestyle{square}
+
 
 \usepackage[ruled]{algorithm2e} % For algorithms
 \renewcommand{\algorithmcfname}{ALGORITHM}
